slashies-macros/tests/command/e20_invalid_max_type.stderr
error: Only integer and floating point number "max" values are supported
 --> tests/command/e20_invalid_max_type.rs:8:7
  |
8 |     #[max = "abc"]
  |       ^^^^^^^^^^^
